# learn_opengl

./: CMakeLists.txt  README.md
lib/: ._glad
lib/glad/: ._include  ._src
lib/glad/include/: ._KHR  ._glad
lib/glad/include/KHR/: ._khrplatform.h
lib/glad/include/glad/: ._glad.h  glad.h
lib/glad/src/: ._glad.c  glad.c
